--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   </head>
   <body>
     <div class="stopwatch">
-      <div id="spin-animation">
-        <span class="circle"></span>
+      <div class="animation">
+        <div id="spin-animation">
+          <span class="circle"></span>
+        </div>
+        <div class="time" id="display">
+          <span>00:00:00</span> <span class="miliseconds">000</span>
+        </div>
       </div>
-      <div class="time" id="display">00:00:00:000</div>
       <div class="controls">
         <button id="start">Start</button>
         <button id="stop">Stop</button>
